e2e/tests/all/snapshots/lightbox_rest_desktop.snap
---
source: e2e/src/suite.rs
description: lightbox at desktop (rest)
expression: tree
---
button "Open the gallery"
  StaticText "Open the gallery"
button "Open the last picture"
  StaticText "Open the last picture"
button "Swap the gallery"
  StaticText "Swap the gallery"
