e2e/tests/all/snapshots/loader_busy_desktop.snap
---
source: e2e/src/suite.rs
description: loader at desktop (busy)
expression: tree
---
button "Cancel"
  StaticText "Cancel"
paragraph
  StaticText "Uploading (oval)"
paragraph
  StaticText "Uploading (bars)"
paragraph
  StaticText "Uploading (dots)"
