e2e/tests/all/snapshots/loader_busy_mobile.snap
---
source: e2e/src/suite.rs
description: loader at mobile (busy)
expression: tree
---
button "Cancel"
  StaticText "Cancel"
paragraph
  StaticText "Uploading (oval)"
paragraph
  StaticText "Uploading (bars)"
paragraph
  StaticText "Uploading (dots)"
